# dataStructures

./: .gitignore  README.md
project1/: CMakeLists.txt  README.md  main
project1/src/: DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicTable.cpp  DynamicTable.h  Menu.cpp  Menu.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Test.cpp  Test.h  main.cpp
project1/testing/: dataGenerator.py  tester.py  testerMP.py
project1/testing/data/: data_1.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  wyniki.csv
project2/: README.md
project2/src/: DTQueue.cpp  DTQueue.h  DynamicTable.cpp  DynamicTable.h  Menu.h  Pair.h  Queue.h  main.cpp
project2/testing/: dataGenerator.py
src/: DynamicTable.cpp  DynamicTable.h
